[package]
name = "rcompiler"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.8"

[dependencies]
anyhow = "1.0.69"
koopa = "0.0.6"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1"
